- https://github.com/eclipse-sirius/sirius-components/issues/1618[#1618] [view] Split the view metamodel into dedicated subpackages.
- https://github.com/eclipse-sirius/sirius-components/issues/2083[#2083] [diagram] Add support for edge markers
- https://github.com/eclipse-sirius/sirius-components/issues/2086[#2086] [diagram] Add a panel with the default diagram actions

== v2023.6.0

=== Shapes

- Filter tree based representations
- Add pages to form in the view DSL
- Simplify the programmatic creation of view models
- Add the ability to convert an odesign to a view model
- Provide a view-based version of Flow
- Add support for the features of the compatibility layer not supported in the view DSL
- Add an example showing how to contribute to the details view with the View DSL
- Improve the layout of simple nodes
- Support custom widgets in Form representations
- Send message to the frontend

=== Architectural decision records

- [ADR-098] Use the editing context to compute the metamodels
- [ADR-099] Filter tree based representations
- [ADR-100] Add support for custom widgets
- [ADR-101] Feedback messages on actions
- [ADR-102] Expand all menu item contribution in Explorer View

=== Breaking changes

- https://github.com/eclipse-sirius/sirius-components/issues/1897[#1897] [diagram] ToolSection are now using records
- https://github.com/eclipse-sirius/sirius-components/issues/1616[#1616] [core] Use Java records for all our payloads
- https://github.com/eclipse-sirius/sirius-components/issues/1848[#1848] [project] Remove the frontend dependency to `uuid` in favor of `crypto.randomUUID`
- https://github.com/eclipse-sirius/sirius-components/issues/1907[#1907] [view] The management of colors is changing, it is not possible anymore to use color directly represented by a string in the _styleDescription_.
All the colors are now defined in a new palette object _ColorPalette_ with the properties _name_ and _value_.
A view can define as many _ColorPalette_ as desired.