@@ -22,6 +22,7 @@ export interface DiagramRendererProps {
 
 export interface DiagramRendererState {
   fullscreen: boolean;
+  snapToGrid: boolean;
 }
 
 export interface Diagram {
